--- a/components/css/Navbar.module.css
+++ b/components/css/Navbar.module.css
@@ -186,3 +186,10 @@
     cursor: default;
   }
 }
+.submenu {
+  padding-left: 1rem;
+  margin-top: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
