--- a/components/css/Navbar.module.css
+++ b/components/css/Navbar.module.css
@@ -4,14 +4,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #dfaf62;
+  background-color: rgb(239, 216, 175);
   position: sticky;
   top: 0;
   z-index: 10;
   transition: background 0.3s ease, backdrop-filter 0.3s ease;
 }
 .scrolled {
-  background-color: rgba(223, 175, 98, 0.6);
+  background-color: rgba(239, 216, 175, 0.6);
   backdrop-filter: blur(8px);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
@@ -63,6 +63,10 @@
   transition: all 0.3s ease;
 }
 
+.navItem {
+  position: relative;
+}
+
 /* Optionnel : rotation ou animation */
 .burgerOpen:nth-child(1) {
   transform: rotate(45deg) translate(5px, 5px);
@@ -109,7 +113,7 @@
   gap: 0.75rem;
   min-width: 200px;
   z-index: 3;
-
+  display: none;
   opacity: 0;
   transform: translateY(-10px);
   transition: opacity 0.3s ease, transform 0.3s ease;
@@ -117,7 +121,7 @@
 }
 
 .showSubMenu {
-  display: flex;
+  display: block;
   opacity: 1;
   transform: translateY(0);
   pointer-events: auto;
@@ -175,7 +179,7 @@
   }
 
   .showSubMenu {
-    display: none;
+    display: block;
   }
 
   .hasSubMenu:hover .subMenu {
@@ -189,7 +193,7 @@
 .submenu {
   padding-left: 1rem;
   margin-top: 0.5rem;
-  display: flex;
+  display: block;
   flex-direction: column;
   gap: 0.5rem;
 }
