--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,12 +2,14 @@
   padding: 5rem 2rem;
   position: relative;
   height: 80vh;
+  width: 100%;
   background-image: url("/images/accueil1.jpeg");
   background-size: cover;
   background-position: center;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
   text-align: center;
   color: white;
   overflow: hidden;
@@ -37,4 +39,15 @@
   position: relative;
   z-index: 2;
   padding: 2rem;
+}
+.contentTop {
+  z-index: 2;
+  max-width: 800px;
+  margin-top: 4rem;
+}
+.paccueil {
+  z-index: 2;
+  text-align: center;
+  font-size: 1.1rem;
+  margin-bottom: 2rem;
 }
