--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,10 @@
 @import "tailwindcss";
 @font-face {
   font-family: "Gliker";
-  src: url("/fonts/gliker/gliker-regular.ttf") format("ttf");
+  src: url("/fonts/gliker/gliker-regular.ttf") format("ttf"),
+    url("/fonts/gliker/gliker-regular.woff") format("woff"),
+    url("/fonts/gliker/gliker-regular.woff2") format("woff2"),
+    url("/fonts/gliker/gliker-regular.eot") format("eot");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -18,6 +21,11 @@ body {
   margin: 0;
   padding: 0;
   color: #a24a3b;
+}
+h1,
+h2,
+.title {
+  font-family: "Gliker", serif;
 }
 #__next {
   display: flex;
