--- a/components/css/AlternatingParagraphs.module.css
+++ b/components/css/AlternatingParagraphs.module.css
@@ -34,14 +34,14 @@
 
 .image img {
   width: 100%;
-  height: auto;
+  height: 600px;
   object-fit: cover;
   display: block;
 }
 .imageContent {
   width: 100%;
   height: auto;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 0;
 }
 
