--- a/components/css/Navbar.module.css
+++ b/components/css/Navbar.module.css
@@ -10,6 +10,10 @@
   z-index: 10;
   transition: background 0.3s ease, backdrop-filter 0.3s ease;
 }
+.navHero {
+  font-family: Didot, serif;
+  margin-left: 100px;
+}
 .scrolled {
   background-color: rgba(239, 216, 175, 0.6);
   backdrop-filter: blur(8px);
@@ -24,7 +28,9 @@
   font-size: 1.1rem;
   gap: 0.5rem;
 }
-
+.logoImage {
+  position: absolute;
+}
 .navList {
   display: flex;
   gap: 2rem;
