--- a/styles/Prestation.module.css
+++ b/styles/Prestation.module.css
@@ -10,6 +10,7 @@
 .heroContent {
   text-align: center;
   max-width: 600px;
+  animation: fadeInUp 0.8s ease-out forwards;
 }
 
 .heroContent h1 {
@@ -26,7 +27,7 @@
 .heroImage {
   width: 100%;
   max-width: 800px;
-  height: auto;
+  height: 600px;
   overflow: hidden;
   border-radius: 8px;
 }
@@ -184,16 +185,19 @@
 }
 
 .button:hover {
-  background-color: #d33820;
+  background: linear-gradient(135deg, #a24a3b, #ffd90059);
+  color: #93301f;
+  font-weight: bold;
 }
 
 .buttonWrapper {
   display: flex;
-  justify-content: center;
-  margin-top: 1rem;
+  justify-content: stretch;
+  margin: 1rem;
 }
 
 /* 🚀 Animation au hover */
 .button:hover .icon {
-  transform: translateX(8px);
+  transform: translateX(8px) scaleX(1.8) scaleY(1.3);
+  transition: transform 0.4s ease;
 }
