--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,14 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: "Didot";
+  src: url("/fonts/didot/GFSDidot-Regular.ttf") format("ttf"),
+    url("/fonts/didot/GFSDidot-Regular .woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 html {
   scroll-behavior: smooth;
 }
@@ -20,12 +28,16 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  color: #a24a3b;
+  color: #333;
 }
 h1,
 h2,
 .title {
   font-family: "Gliker", serif;
+  font-size: 2rem;
+}
+h2 {
+  color: #a23a2b;
 }
 #__next {
   display: flex;
@@ -50,6 +62,6 @@ main {
 
 body {
   background: var(--background);
-  color: #a24a3b;
+  color: #333;
   font-family: Arial, Helvetica, sans-serif;
 }
