Modif de fin vue avec Juju la boss 23

--- a/components/css/AlternatingParagraphs.module.css
+++ b/components/css/AlternatingParagraphs.module.css
@@ -96,7 +96,9 @@
   .text {
     padding: 1rem;
   }
-
+  .image img {
+    height: 350px;
+  }
   .ctaHint {
     opacity: 1;
     transform: none;
